--- a/src/app/LMS/mytrainings/mytrainings.component.html
+++ b/src/app/LMS/mytrainings/mytrainings.component.html
@@ -93,7 +93,7 @@
                                                     <th>Duration</th>
                                                     <th>Provider</th>
                                                     <th class="text-center">Target Date</th>
-                                                    <th>Status</th>
+                                                    <th>Training Status</th>
                                                     <th>Action</th>
                                                     <th>Log Details</th>
                                                 </tr>
