--- a/src/app/dashboards/dashboard-emp/dashboard-emp.component.html
+++ b/src/app/dashboards/dashboard-emp/dashboard-emp.component.html
@@ -390,7 +390,7 @@
                                         <div class="row mt-1 text-center pa-0">                    
                                             <div class="col-lg-6 ">                        
                                                 <h6 class="font-type ma-5"><span class="badge fs-12 bg-light-orange text-orange"><span class="font-type fs-14 fw-semibold text-orange">40</span> hrs</span></h6>                        
-                                                <p class="font-type fs-12 margin-up-5">Assigned</p>                    
+                                                <p class="font-type fs-12 margin-up-5">Target</p>                    
                                             </div>                    
                                             <div class="col-lg-6">                        
                                                 <h6 class="font-type ma-5"><span class="badge bg-info-subtle text-blue fs-12"><span class="font-type fs-14 fw-semibold text-blue" >8</span> hrs</span></h6>                                             
